# c-plus-plus-project

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  pyflux.mdj
data/: nile.csv  sunspots.csv
data/performance_results/: sunspots_BBVI_2_2_0_0_Normal.csv  sunspots_Laplace_2_2_0_0_Normal.csv  sunspots_M-H_2_2_0_0_Normal.csv  sunspots_MLE_2_2_0_0_Normal.csv  sunspots_PML_2_2_0_0_Normal.csv
doc/html/: Param_8h_source.html  annotated.html  arima_8cpp.html  arima_8cpp__incl.map  arima_8cpp__incl.md5  arima_8hpp.html  arima_8hpp__dep__incl.map  arima_8hpp__dep__incl.md5  arima_8hpp__incl.map  arima_8hpp__incl.md5  arima_8hpp_source.html  arima__recursion_8cpp.html  arima__recursion_8cpp__incl.map  arima__recursion_8cpp__incl.md5  arima__recursion_8hpp.html  arima__recursion_8hpp__dep__incl.map  arima__recursion_8hpp__dep__incl.md5  arima__recursion_8hpp__incl.map  arima__recursion_8hpp__incl.md5  arima__recursion_8hpp_source.html  bbvi_8cpp.html  bbvi_8cpp__incl.map  bbvi_8cpp__incl.md5  bbvi_8hpp.html  bbvi_8hpp__dep__incl.map  bbvi_8hpp__dep__incl.md5  bbvi_8hpp__incl.map  bbvi_8hpp__incl.md5  bbvi_8hpp_source.html  bbvi__routines_8cpp.html  bbvi__routines_8cpp__incl.map  bbvi__routines_8cpp__incl.md5  bbvi__routines_8hpp.html  bbvi__routines_8hpp__dep__incl.map  bbvi__routines_8hpp__dep__incl.md5  bbvi__routines_8hpp__incl.map  bbvi__routines_8hpp__incl.md5  bbvi__routines_8hpp_source.html  build_2__deps_2catch2-src_2src_2catch2_2interfaces_2catch__interfaces__testcase_8hpp_source.html  build_2__deps_2catch2-src_2src_2catch2_2internal_2catch__combined__tu_8cpp.html  (+560 more)
doc/html/search/: all_0.html  all_0.js  all_1.html  all_1.js  all_10.html  all_10.js  all_11.html  all_11.js  all_12.html  all_12.js  all_13.html  all_13.js  all_17.js  all_18.html  all_18.js  all_2.html  all_2.js  all_3.html  all_3.js  all_4.html  all_4.js  all_5.html  all_5.js  all_6.html  all_6.js  all_7.html  all_7.js  all_8.html  all_8.js  all_9.html  all_9.js  all_a.html  all_a.js  all_b.html  all_b.js  all_c.html  all_c.js  all_d.html  all_d.js  all_e.html  (+138 more)
include/: covariances.hpp  data_check.hpp  headers.hpp  hessian.hpp  latent_variables.hpp  matplotlibcpp.hpp  multivariate_normal.hpp  optimizer_function.hpp  posterior.hpp  results.hpp  tsm.hpp  utilities.hpp
include/Eigen/src/Core/: VectorwiseOp.h
include/Eigen/src/Geometry/: OrthoMethods.h
include/arima/: arima.hpp  arima_recursion.hpp
include/cppoptlib/: function.h
include/cppoptlib/linesearch/: armijo.h  more_thuente.h
include/cppoptlib/solver/: bfgs.h  conjugated_gradient_descent.h  gradient_descent.h  lbfgs.h  lbfgsb.h  newton_descent.h  solver.h
include/cppoptlib/utils/: derivatives.h
include/families/: family.hpp  family_attributes.hpp  flat.hpp  lv_to_build.hpp  normal.hpp
include/inference/: bbvi.hpp  bbvi_routines.hpp  metropolis_hastings.hpp  metropolis_sampler.hpp  norm_post_sim.hpp  sample.hpp  stoch_optim.hpp
include/output/: tableprinter.hpp
include/pybind11/: attr.h  buffer_info.h  cast.h  complex.h  eigen.h  embed.h  eval.h  functional.h  gil.h  numpy.h  operators.h  options.h  pybind11.h  pytypes.h  stl.h  stl_bind.h
include/pybind11/detail/: class.h  common.h  descr.h  init.h  internals.h  type_caster_base.h  typeid.h
include/pybind11/stl/: filesystem.h
include/tests/: nhst.hpp
src/: data_check.cpp  hessian.cpp  latent_variables.cpp  multivariate_normal.cpp  optimizer_function.cpp  posterior.cpp  results.cpp  tests.cpp  tsm.cpp  utilities.cpp
src/arima/: arima.cpp  arima_recursion.cpp
src/families/: family.cpp  flat.cpp  lv_to_build.cpp  normal.cpp
src/inference/: bbvi.cpp  bbvi_routines.cpp  metropolis_hastings.cpp  metropolis_sampler.cpp  norm_post_sim.cpp  stoch_optim.cpp
src/output/: TablePrinter.cpp  tableprinter.cpp
test/: test_covariances.cpp  test_data_check.cpp  test_family.cpp  test_hessian.cpp  test_latent_variables.cpp  test_results.cpp  test_tableprinter.cpp  test_tsm.cpp  test_utilities.cpp
test/arima/: test_arima.cpp  test_arima_sunspots.cpp  test_arima_sunspots_plots.cpp  test_performance.cpp  test_sunspot.cpp
test/families/: test_family.cpp  test_flat.cpp  test_normal.cpp
test/inference/: test_bbvi.cpp  test_bbvi_routines.cpp  test_metropolis_hastings.cpp  test_metropolis_sampler.cpp  test_norm_post_sim.cpp  test_stoch_optim.cpp
test/output/: test_tableprinter.cpp
test/tests/: test_nhst.cpp
